# linear

./: .gitignore  Core.hs  DataCon.hs  DefaultTypes.hs  Flags.hs  LICENSE  Main.hs  Pretty.hs  Stg.hs  TyCon.hs  TyCon.hs-boot  Type.hs  Type.hs-boot  Weight.hs  linear.cabal
Cmm/: Cmm.hs  CmmExpr.hs  CmmMachOp.hs  CmmNode.hs  CmmType.hs
Core/: Atomize.hs  Helper.hs  Inliner.hs  Passes.hs  ReduceLinear.hs  Renamer.hs  Simplify.hs
Stg/: Compile.hs  CoreToStg.hs
doc/: .gitignore  bib.bib  proposal.tex  simplifier.tex
