name:                linear
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              C-Elegans
maintainer:          mtnolan2640@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable linear
  main-is:             Main.hs
  other-modules:       
    Core, Core.Renamer,Pretty,Type,Core.Passes,Core.Simplify,
    Core.Atomize, Core.Helper, Core.ReduceLinear, DataCon, Flags, Weight
  -- other-extensions:    
  build-depends:        base       >= 4.7 && <4.9.2,
                        wl-pprint  >= 1.1,
                        text       >= 1.0,
                        mtl        >= 2.0,
                        containers >= 0.5.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings, MagicHash
